--- a/RTS_machine_learning.ipynb
+++ b/RTS_machine_learning.ipynb
@@ -446,6 +446,7 @@
     }
    ],
    "source": [
+    "# Реализация и подбор параметров\n",
     "rforest_grid_params = {\n",
     "    'max_depth': np.arange(3, 8),\n",
     "    'min_samples_leaf': np.arange(1, 4),\n",
@@ -465,20 +466,71 @@
     "    rforest_mse = mse(Ytest, rforest_predicted)\n",
     "    forests.append((rforest_fitted_model, rforest_predicted, rforest_r2, rforest_mse))\n",
     "\n",
-    "# plt.plot(Ytest.sort_index(), marker='o', markersize=4, linewidth=2, color='#63f9', label='Фактические значения')\n",
-    "# plt.scatter(\n",
-    "#     Ytest.index, rforest_predicted, \n",
-    "#     color='red', label='Предсказанные значения', s=25\n",
-    "# )\n",
-    "# plt.title(f'Случайный лес (R{chr(178)}: {rforest_r2:.4f})')\n",
-    "# plt.legend()\n",
-    "# plt.show()"
+    "\n",
+    "# Вывод результатов\n",
+    "for i in sorted(forests, key=lambda x: x[-1])[:10]:\n",
+    "    print(i)\n",
+    "    print('='*100)\n",
+    "\n",
+    "min_forest = min(forests, key=lambda x: x[-1])\n",
+    "plt.plot(Ytest.sort_index(), marker='o', markersize=4, linewidth=2, color='#63f9', label='Фактические значения')\n",
+    "plt.scatter(\n",
+    "    Ytest.index, min_forest[1], \n",
+    "    color='red', label='Предсказанные значения', s=25\n",
+    ")\n",
+    "plt.title(f'Случайный лес (R{chr(178)}: {min_forest[2]:.4f}; MSE: {min_forest[-1]:.4f})')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# 3D графики\n",
+    "fig = plt.figure(figsize=(17, 12))\n",
+    "ax = fig.gca(projection='3d')\n",
+    "ax.set_xlabel('Максимальная глубина дерева', labelpad=15, fontsize=18)\n",
+    "ax.set_ylabel('Количество деревьев', labelpad=15, fontsize=18)\n",
+    "ax.set_zlabel('MSE', labelpad=15, rotation=90, fontsize=18)\n",
+    "\n",
+    "X = np.array(list(map(lambda x: x[0].max_depth, data)))\n",
+    "Y = np.array(list(map(lambda x: x[0].n_estimators, data)))\n",
+    "Z = np.array(list(map(lambda x: x[-1], data)))\n",
+    "\n",
+    "for x, y, z in zip(X, Y, Z):\n",
+    "    r = (z-Z.min()) / (Z.max() - Z.min())\n",
+    "    g = 1 - r\n",
+    "    color = np.array([r, g, 0, 1]).reshape(1, -1)\n",
+    "    surf = ax.scatter(x, y, z, marker='^', c=color, s=70)\n",
+    "ax.view_init(60, 60)\n",
+    "ax.set_zlim(4000, 10000)\n",
+    "plt.xticks(np.arange(3, 8))\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "fig = plt.figure(figsize=(17, 12))\n",
+    "ax = fig.gca(projection='3d')\n",
+    "ax.set_xlabel('Min объектов в листьях', labelpad=15, fontsize=18)\n",
+    "ax.set_ylabel('Доля записей для обучения', labelpad=15, fontsize=18)\n",
+    "ax.set_zlabel('MSE', labelpad=15, rotation=90, fontsize=18)\n",
+    "\n",
+    "X = np.array(list(map(lambda x: x[0].min_samples_leaf, data)))\n",
+    "Y = np.array(list(map(lambda x: x[0].max_samples, data)))\n",
+    "Z = np.array(list(map(lambda x: x[-1], data)))\n",
+    "\n",
+    "for x, y, z in zip(X, Y, Z):\n",
+    "    r = (z-Z.min()) / (Z.max() - Z.min())\n",
+    "    g = 1 - r\n",
+    "    color = np.array([r, g, 0, 1]).reshape(1, -1)\n",
+    "    surf = ax.scatter(x, y, z, marker='^', c=color, s=70)\n",
+    "ax.view_init(60, 60)\n",
+    "ax.set_zlim(4000, 10000)\n",
+    "plt.xticks(np.arange(1, 4))\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 355,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -514,159 +566,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 366,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
+      "RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
       "                      max_depth=6, max_features='sqrt', max_leaf_nodes=None,\n",
       "                      max_samples=0.5, min_impurity_decrease=0.0,\n",
       "                      min_impurity_split=None, min_samples_leaf=1,\n",
       "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
       "                      n_estimators=18, n_jobs=-1, oob_score=False,\n",
-      "                      random_state=40, verbose=0, warm_start=False), array([1212.19015212, 1270.71320767, 1203.12792989, 1279.79968915,\n",
-      "       1232.87207804, 1223.1026336 , 1224.77930026, 1156.30206481,\n",
-      "       1234.21249471, 1217.60545767, 1234.21249471, 1200.61394841,\n",
-      "       1081.60550926, 1218.83689815, 1217.16023148, 1191.53731481,\n",
-      "       1159.15701852, 1209.1115291 , 1260.37735582, 1271.67237434,\n",
-      "       1283.19422619, 1271.79920767, 1334.15209656, 1320.80862434]), 0.4715326174357697, 5306.298832777923)\n",
+      "                      random_state=40, verbose=0, warm_start=False)\n",
+      "MSE: 5306.298832777923\n",
       "====================================================================================================\n",
       "====================================================================================================\n",
-      "(RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
+      "RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
       "                      max_depth=6, max_features='sqrt', max_leaf_nodes=None,\n",
       "                      max_samples=0.6, min_impurity_decrease=0.0,\n",
       "                      min_impurity_split=None, min_samples_leaf=1,\n",
       "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
       "                      n_estimators=18, n_jobs=-1, oob_score=False,\n",
-      "                      random_state=40, verbose=0, warm_start=False), array([1226.71905021, 1305.85502707, 1220.84157799, 1296.61664744,\n",
-      "       1228.89109497, 1247.18023386, 1240.170882  , 1155.74141589,\n",
-      "       1238.79807645, 1228.04554558, 1238.79807645, 1196.99323077,\n",
-      "       1117.62794058, 1243.61943198, 1243.61943198, 1204.32702457,\n",
-      "       1141.83156933, 1204.32702457, 1311.41976318, 1311.41976318,\n",
-      "       1298.83721688, 1288.69212429, 1298.83721688, 1288.69212429]), 0.3993643181775137, 6030.934968804932)\n",
+      "                      random_state=40, verbose=0, warm_start=False)\n",
+      "MSE: 6030.934968804932\n",
       "====================================================================================================\n",
       "====================================================================================================\n",
-      "(RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
+      "RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
       "                      max_depth=6, max_features='sqrt', max_leaf_nodes=None,\n",
       "                      max_samples=0.5, min_impurity_decrease=0.0,\n",
       "                      min_impurity_split=None, min_samples_leaf=1,\n",
       "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
       "                      n_estimators=19, n_jobs=-1, oob_score=False,\n",
-      "                      random_state=40, verbose=0, warm_start=False), array([1205.12570802, 1263.07567043, 1196.54044486, 1271.68391604,\n",
-      "       1242.61312657, 1233.35786341, 1234.94628446, 1159.62090351,\n",
-      "       1243.88299499, 1228.15001253, 1243.88299499, 1194.1587782 ,\n",
-      "       1081.4139411 , 1211.42262531, 1209.83420426, 1185.55986216,\n",
-      "       1162.32559649, 1202.20911779, 1250.77674311, 1261.47728697,\n",
-      "       1274.89979323, 1264.10451253, 1323.17567043, 1310.53448622]), 0.3894569387934911, 6130.4141748937545)\n",
+      "                      random_state=40, verbose=0, warm_start=False)\n",
+      "MSE: 6130.4141748937545\n",
       "====================================================================================================\n",
       "====================================================================================================\n",
-      "(RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
+      "RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
       "                      max_depth=6, max_features='sqrt', max_leaf_nodes=None,\n",
       "                      max_samples=0.5, min_impurity_decrease=0.0,\n",
       "                      min_impurity_split=None, min_samples_leaf=1,\n",
       "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
       "                      n_estimators=20, n_jobs=-1, oob_score=False,\n",
-      "                      random_state=40, verbose=0, warm_start=False), array([1201.55742262, 1256.6098869 , 1193.40142262, 1264.78772024,\n",
-      "       1237.17047024, 1228.37797024, 1229.88697024, 1158.32785833,\n",
-      "       1238.37684524, 1223.4305119 , 1238.37684524, 1191.13883929,\n",
-      "       1079.20874405, 1207.53949405, 1206.03049405, 1182.96986905,\n",
-      "       1160.89731667, 1198.7866619 , 1244.92590595, 1255.09142262,\n",
-      "       1267.84280357, 1257.5872869 , 1313.7048869 , 1301.6957619 ]), 0.37519644242953765, 6273.602681332338)\n",
+      "                      random_state=40, verbose=0, warm_start=False)\n",
+      "MSE: 6273.602681332338\n",
       "====================================================================================================\n",
       "====================================================================================================\n",
-      "(RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
+      "RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
       "                      max_depth=6, max_features='sqrt', max_leaf_nodes=None,\n",
       "                      max_samples=0.6, min_impurity_decrease=0.0,\n",
       "                      min_impurity_split=None, min_samples_leaf=1,\n",
       "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
       "                      n_estimators=19, n_jobs=-1, oob_score=False,\n",
-      "                      random_state=40, verbose=0, warm_start=False), array([1221.39699494, 1296.36792038, 1215.82886336, 1287.61577126,\n",
-      "       1223.45472155, 1240.78127418, 1234.14083558, 1203.95502558,\n",
-      "       1232.84028295, 1222.65367476, 1232.84028295, 1193.23569231,\n",
-      "       1118.04752265, 1237.40788293, 1237.40788293, 1188.19261977,\n",
-      "       1128.98639901, 1188.19261977, 1301.63977564, 1301.63977564,\n",
-      "       1289.71946862, 1280.10832827, 1289.71946862, 1280.10832827]), 0.3743627277020234, 6281.973944406348)\n",
-      "====================================================================================================\n",
-      "====================================================================================================\n",
-      "(RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
-      "                      max_depth=6, max_features='sqrt', max_leaf_nodes=None,\n",
-      "                      max_samples=0.5, min_impurity_decrease=0.0,\n",
-      "                      min_impurity_split=None, min_samples_leaf=1,\n",
-      "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-      "                      n_estimators=22, n_jobs=-1, oob_score=False,\n",
-      "                      random_state=40, verbose=0, warm_start=False), array([1219.07127952, 1269.11897432, 1211.65673406, 1276.55336826,\n",
-      "       1251.44677735, 1243.45359553, 1244.82541372, 1179.77167562,\n",
-      "       1252.5434819 , 1238.95590614, 1252.5434819 , 1195.73273268,\n",
-      "       1075.92999459, 1210.64241883, 1223.13770809, 1202.17350354,\n",
-      "       1182.10754683, 1216.55240614, 1258.49717346, 1267.73855224,\n",
-      "       1262.91206385, 1258.48611797, 1309.50211797, 1315.00338449]), 0.36808753751636025, 6344.982628492157)\n",
-      "====================================================================================================\n",
-      "====================================================================================================\n",
-      "(RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
-      "                      max_depth=6, max_features='sqrt', max_leaf_nodes=None,\n",
-      "                      max_samples=0.6, min_impurity_decrease=0.0,\n",
-      "                      min_impurity_split=None, min_samples_leaf=1,\n",
-      "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-      "                      n_estimators=21, n_jobs=-1, oob_score=False,\n",
-      "                      random_state=40, verbose=0, warm_start=False), array([1215.57290018, 1289.0747851 , 1210.53506685, 1281.15617399,\n",
-      "       1223.10570045, 1238.78210521, 1232.77408934, 1199.79207076,\n",
-      "       1231.59739886, 1216.70989621, 1231.59739886, 1177.09153114,\n",
-      "       1096.60579034, 1220.54592582, 1230.0589417 , 1185.53084646,\n",
-      "       1131.96331339, 1185.53084646, 1288.17351129, 1288.17351129,\n",
-      "       1281.50809066, 1272.81229701, 1281.50809066, 1274.36372558]), 0.36639967655623384, 6361.930305753055)\n",
-      "====================================================================================================\n",
-      "====================================================================================================\n",
-      "(RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
-      "                      max_depth=6, max_features='sqrt', max_leaf_nodes=None,\n",
-      "                      max_samples=0.6, min_impurity_decrease=0.0,\n",
-      "                      min_impurity_split=None, min_samples_leaf=1,\n",
-      "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-      "                      n_estimators=20, n_jobs=-1, oob_score=False,\n",
-      "                      random_state=40, verbose=0, warm_start=False), array([1218.14454519, 1295.32152436, 1212.85482019, 1287.00698269,\n",
-      "       1226.05398547, 1242.51421047, 1236.2057938 , 1201.5746743 ,\n",
-      "       1234.9702688 , 1219.33839103, 1234.9702688 , 1191.39130769,\n",
-      "       1103.21774652, 1233.35488878, 1233.35488878, 1186.60038878,\n",
-      "       1130.35447906, 1186.60038878, 1294.37518686, 1294.37518686,\n",
-      "       1289.00549519, 1279.87491186, 1289.00549519, 1279.87491186]), 0.3661581140176836, 6364.355815933329)\n",
-      "====================================================================================================\n",
-      "====================================================================================================\n",
-      "(RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
-      "                      max_depth=6, max_features='sqrt', max_leaf_nodes=None,\n",
-      "                      max_samples=0.6, min_impurity_decrease=0.0,\n",
-      "                      min_impurity_split=None, min_samples_leaf=1,\n",
-      "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-      "                      n_estimators=22, n_jobs=-1, oob_score=False,\n",
-      "                      random_state=40, verbose=0, warm_start=False), array([1215.8982229 , 1286.05911305, 1211.08938199, 1278.50043881,\n",
-      "       1223.08862315, 1238.05246406, 1232.31753982, 1200.83470391,\n",
-      "       1231.19433528, 1216.9835373 , 1231.19433528, 1179.16600699,\n",
-      "       1102.33870896, 1220.64520192, 1229.72580798, 1187.22171707,\n",
-      "       1136.08907187, 1187.22171707, 1285.19880624, 1285.19880624,\n",
-      "       1278.83635927, 1270.53582896, 1278.83635927, 1272.01673805]), 0.3598787967886241, 6427.405939332668)\n",
-      "====================================================================================================\n",
-      "====================================================================================================\n",
-      "(RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
-      "                      max_depth=6, max_features='sqrt', max_leaf_nodes=None,\n",
-      "                      max_samples=0.5, min_impurity_decrease=0.0,\n",
-      "                      min_impurity_split=None, min_samples_leaf=1,\n",
-      "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-      "                      n_estimators=21, n_jobs=-1, oob_score=False,\n",
-      "                      random_state=40, verbose=0, warm_start=False), array([1214.30356267, 1266.73448103, 1206.53594362, 1274.52289373,\n",
-      "       1248.22075088, 1239.84694135, 1241.28408421, 1173.13254906,\n",
-      "       1249.36967945, 1235.13507627, 1249.36967945, 1189.85365646,\n",
-      "       1075.00261338, 1205.47332766, 1218.56363069, 1196.60113069,\n",
-      "       1175.57965224, 1211.66474294, 1255.60688013, 1265.28832457,\n",
-      "       1260.2320034 , 1250.46484467, 1303.910178  , 1309.67340961]), 0.35984968241918447, 6427.698274393774)\n",
+      "                      random_state=40, verbose=0, warm_start=False)\n",
+      "MSE: 6281.973944406348\n",
       "====================================================================================================\n",
       "====================================================================================================\n"
      ]
     }
    ],
    "source": [
-    "for i in sorted(forests, key=lambda x: x[-1])[:10]:\n",
-    "    print(i)\n",
+    "for i in sorted(forests, key=lambda x: x[-1])[:5]:\n",
+    "    print(i[0])\n",
+    "    print(f'MSE: {i[-1]}')\n",
     "    print('='*100)\n",
     "    print('='*100)"
    ]
