Я плачу на техно

--- a/RTS_machine_learning.ipynb
+++ b/RTS_machine_learning.ipynb
@@ -448,83 +448,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Реализация и подбор параметров\n",
-    "# rforest_grid_params = {\n",
-    "#     'max_depth': np.arange(3, 8),\n",
-    "#     'min_samples_leaf': np.arange(1, 4),\n",
-    "#     'max_features': ('sqrt',),\n",
-    "#     'n_estimators': np.arange(18, 26, 1),\n",
-    "#     'max_samples': np.arange(.1, 1, .1)\n",
-    "# }\n",
-    "# count = reduce(lambda x, y: x*y, map(len, rforest_grid_params.values()))\n",
+    "Xtrn = x_df[:'2017'].drop(['FTSE', 'DAX', 'SP500', 'SSE'], axis=1)\n",
+    "Xtest = x_df['2018':].drop(['FTSE', 'DAX', 'SP500', 'SSE'], axis=1)\n",
     "\n",
-    "# forests = []\n",
-    "# for args in tqdm(product(*rforest_grid_params.values()), total=count, desc=' tree'):\n",
-    "#     params = dict(zip(rforest_grid_params.keys(), args))\n",
-    "#     rforest_model = RandomForestRegressor(n_jobs=-1, random_state=random_state, **params)\n",
-    "#     rforest_fitted_model = rforest_model.fit(Xtrn, Ytrn)\n",
-    "#     rforest_predicted = rforest_fitted_model.predict(Xtest)\n",
-    "#     rforest_r2 = r2_score(Ytest, rforest_predicted)\n",
-    "#     rforest_mse = mse(Ytest, rforest_predicted)\n",
-    "#     forests.append((rforest_fitted_model, rforest_predicted, rforest_r2, rforest_mse))\n",
+    "Ytrn = y_df[:'2017']\n",
+    "Ytest = y_df['2018':]\n",
     "\n",
+    "# Реализация и подбор параметров\n",
+    "rforest_grid_params = {\n",
+    "    'max_depth': np.arange(3, 8),\n",
+    "    'min_samples_leaf': np.arange(1, 4),\n",
+    "    'max_features': ('sqrt',),\n",
+    "    'n_estimators': np.arange(18, 26, 1),\n",
+    "    'max_samples': np.arange(.1, 1, .1)\n",
+    "}\n",
+    "count = reduce(lambda x, y: x*y, map(len, rforest_grid_params.values()))\n",
     "\n",
-    "# # Вывод результатов\n",
-    "# for i in sorted(forests, key=lambda x: x[-1])[:10]:\n",
-    "#     print(i)\n",
-    "#     print('='*100)\n",
-    "\n",
-    "# min_forest = min(forests, key=lambda x: x[-1])\n",
-    "# plt.plot(Ytest.sort_index(), marker='o', markersize=4, linewidth=2, color='#63f9', label='Фактические значения')\n",
-    "# plt.scatter(\n",
-    "#     Ytest.index, min_forest[1], \n",
-    "#     color='red', label='Предсказанные значения', s=25\n",
-    "# )\n",
-    "# plt.title(f'Случайный лес (R{chr(178)}: {min_forest[2]:.4f}; MSE: {min_forest[-1]:.4f})')\n",
-    "# plt.legend()\n",
-    "# plt.show()\n",
-    "\n",
-    "# # 3D графики\n",
-    "# fig = plt.figure(figsize=(17, 12))\n",
-    "# ax = fig.gca(projection='3d')\n",
-    "# ax.set_xlabel('Максимальная глубина дерева', labelpad=15, fontsize=18)\n",
-    "# ax.set_ylabel('Количество деревьев', labelpad=15, fontsize=18)\n",
-    "# ax.set_zlabel('MSE', labelpad=15, rotation=90, fontsize=18)\n",
-    "\n",
-    "# X = np.array(list(map(lambda x: x[0].max_depth, data)))\n",
-    "# Y = np.array(list(map(lambda x: x[0].n_estimators, data)))\n",
-    "# Z = np.array(list(map(lambda x: x[-1], data)))\n",
-    "\n",
-    "# for x, y, z in zip(X, Y, Z):\n",
-    "#     r = (z-Z.min()) / (Z.max() - Z.min())\n",
-    "#     g = 1 - r\n",
-    "#     color = np.array([r, g, 0, 1]).reshape(1, -1)\n",
-    "#     surf = ax.scatter(x, y, z, marker='^', c=color, s=70)\n",
-    "# ax.view_init(60, 60)\n",
-    "# ax.set_zlim(4000, 10000)\n",
-    "# plt.xticks(np.arange(3, 8))\n",
-    "# plt.show()\n",
+    "forests = []\n",
+    "for args in tqdm(product(*rforest_grid_params.values()), total=count, desc=' tree'):\n",
+    "    params = dict(zip(rforest_grid_params.keys(), args))\n",
+    "    rforest_model = RandomForestRegressor(n_jobs=-1, random_state=random_state, **params)\n",
+    "    rforest_fitted_model = rforest_model.fit(Xtrn, Ytrn)\n",
+    "    rforest_predicted = rforest_fitted_model.predict(Xtest)\n",
+    "    rforest_r2 = r2_score(Ytest, rforest_predicted)\n",
+    "    rforest_mse = mse(Ytest, rforest_predicted)\n",
+    "    forests.append((rforest_fitted_model, rforest_predicted, rforest_r2, rforest_mse))\n",
     "\n",
     "\n",
-    "# fig = plt.figure(figsize=(17, 12))\n",
-    "# ax = fig.gca(projection='3d')\n",
-    "# ax.set_xlabel('Min объектов в листьях', labelpad=15, fontsize=18)\n",
-    "# ax.set_ylabel('Доля записей для обучения', labelpad=15, fontsize=18)\n",
-    "# ax.set_zlabel('MSE', labelpad=15, rotation=90, fontsize=18)\n",
+    "# Вывод результатов\n",
+    "for i in sorted(forests, key=lambda x: x[-1])[:10]:\n",
+    "    print(i)\n",
+    "    print('='*100)\n",
     "\n",
-    "# X = np.array(list(map(lambda x: x[0].min_samples_leaf, data)))\n",
-    "# Y = np.array(list(map(lambda x: x[0].max_samples, data)))\n",
-    "# Z = np.array(list(map(lambda x: x[-1], data)))\n",
+    "min_forest = min(forests, key=lambda x: x[-1])\n",
+    "plt.plot(Ytest.sort_index(), marker='o', markersize=4, linewidth=2, color='#63f9', label='Фактические значения')\n",
+    "plt.scatter(\n",
+    "    Ytest.index, min_forest[1], \n",
+    "    color='red', label='Предсказанные значения', s=25\n",
+    ")\n",
+    "plt.title(f'Случайный лес (R{chr(178)}: {min_forest[2]:.4f}; MSE: {min_forest[-1]:.4f})')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
     "\n",
-    "# for x, y, z in zip(X, Y, Z):\n",
-    "#     r = (z-Z.min()) / (Z.max() - Z.min())\n",
-    "#     g = 1 - r\n",
-    "#     color = np.array([r, g, 0, 1]).reshape(1, -1)\n",
-    "#     surf = ax.scatter(x, y, z, marker='^', c=color, s=70)\n",
-    "# ax.view_init(60, 60)\n",
-    "# ax.set_zlim(4000, 10000)\n",
-    "# plt.xticks(np.arange(1, 4))\n",
-    "# plt.show()"
+    "# 3D графики\n",
+    "fig = plt.figure(figsize=(17, 12))\n",
+    "ax = fig.gca(projection='3d')\n",
+    "ax.set_xlabel('Максимальная глубина дерева', labelpad=15, fontsize=18)\n",
+    "ax.set_ylabel('Количество деревьев', labelpad=15, fontsize=18)\n",
+    "ax.set_zlabel('MSE', labelpad=15, rotation=90, fontsize=18)\n",
+    "\n",
+    "X = np.array([x[0].max_depth for x in data])\n",
+    "Y = np.array([x[0].n_estimators for x in data])\n",
+    "Z = np.array([x[-1] for x in data])\n",
+    "\n",
+    "for x, y, z in zip(X, Y, Z):\n",
+    "    r = (z-Z.min()) / (Z.max() - Z.min())\n",
+    "    g = 1 - r\n",
+    "    color = np.array([r, g, 0, 1]).reshape(1, -1)\n",
+    "    surf = ax.scatter(x, y, z, marker='^', c=color, s=70)\n",
+    "ax.view_init(60, 60)\n",
+    "ax.set_zlim(4000, 10000)\n",
+    "plt.xticks(np.arange(3, 8))\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "fig = plt.figure(figsize=(17, 12))\n",
+    "ax = fig.gca(projection='3d')\n",
+    "ax.set_xlabel('Min объектов в листьях', labelpad=15, fontsize=18)\n",
+    "ax.set_ylabel('Доля записей для обучения', labelpad=15, fontsize=18)\n",
+    "ax.set_zlabel('MSE', labelpad=15, rotation=90, fontsize=18)\n",
+    "\n",
+    "X = np.array([x[0].min_samples_leaf for x in data])\n",
+    "Y = np.array([x[0].max_samples for x in data])\n",
+    "Z = np.array([x[-1] for x in data])\n",
+    "\n",
+    "for x, y, z in zip(X, Y, Z):\n",
+    "    r = (z-Z.min()) / (Z.max() - Z.min())\n",
+    "    g = 1 - r\n",
+    "    color = np.array([r, g, 0, 1]).reshape(1, -1)\n",
+    "    surf = ax.scatter(x, y, z, marker='^', c=color, s=70)\n",
+    "ax.view_init(60, 60)\n",
+    "ax.set_zlim(4000, 10000)\n",
+    "plt.xticks(np.arange(1, 4))\n",
+    "plt.show()"
    ]
   },
   {
@@ -772,6 +778,109 @@
     "* **min_child_weight** - минимальное количество наблюдений в листе дерева\n",
     "* **subsample** - доля объектов обучающей выборки, используемых в каждой итерации\n",
     "* **colsample_bytree** - доля факторов, используемых при построении дерева"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The Pomoyka"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grid Search\n",
+    "xgboost_params = {\n",
+    "    'n_estimators': np.arange(15, 51, 1),\n",
+    "    'max_depth': np.arange(5, 12, 2),\n",
+    "    'learning_rate': np.arange(.4, .71, .1),\n",
+    "    'min_child_weight': np.arange(1, 3),\n",
+    "    'subsample': np.arange(.3, 1, .3),\n",
+    "    'colsample_bytree': np.arange(.3, 1, .3)\n",
+    "}\n",
+    "\n",
+    "count = reduce(lambda x, y: x*y, map(len, xgboost_params.values()))\n",
+    "\n",
+    "boosts = []\n",
+    "for args in tqdm(product(*xgboost_params.values()), total=count):\n",
+    "    params = dict(zip(xgboost_params.keys(), args))\n",
+    "    xgb_model = XGBRegressor(booster='gbtree', n_jobs=-1, random_state=random_state, **params)\n",
+    "    best_xgb_model = xgb_model.fit(Xtrn, Ytrn)\n",
+    "    predicted = best_xgb_model.predict(Xtest)\n",
+    "    xgb_r2 = r2_score(Ytest, predicted)\n",
+    "    xgb_mse = mse(Ytest, predicted)\n",
+    "    if xgb_mse <= 10_000:\n",
+    "        boosts.append((best_xgb_model, predicted, xgb_r2, xgb_mse))\n",
+    "\n",
+    "# Graphics\n",
+    "for x_name, y_name in combinations(xgboost_params, 2):\n",
+    "    fig = plt.figure(figsize=(17, 12))\n",
+    "    ax = fig.gca(projection='3d')\n",
+    "    ax.set_xlabel(x_name, labelpad=15, fontsize=18)\n",
+    "    ax.set_ylabel(y_name, labelpad=15, fontsize=18)\n",
+    "    ax.set_zlabel('MSE', labelpad=15, rotation=90, fontsize=18)\n",
+    "\n",
+    "    X = np.array([getattr(x[0], x_name) for x in boosts])\n",
+    "    Y = np.array([getattr(x[0], y_name) for x in boosts])\n",
+    "    Z = np.array([x[-1] for x in data])\n",
+    "\n",
+    "    for x, y, z in zip(X, Y, Z):\n",
+    "        r = (z-Z.min()) / (Z.max() - Z.min())\n",
+    "        g = 1 - r\n",
+    "        color = np.array([r, g, 0, 1]).reshape(1, -1)\n",
+    "        surf = ax.scatter(x, y, z, marker='^', c=color, s=50+(g*150))\n",
+    "    ax.view_init(60, 60)\n",
+    "    ax.set_zlim(3000, 10000)\n",
+    "    plt.xticks(xgboost_params[x_name])\n",
+    "    plt.yticks(xgboost_params[y_name])\n",
+    "    plt.show()\n",
+    "\n",
+    "# n_estimators\n",
+    "tmp_result = np.array([])\n",
+    "tmp_grid_n_estimators = np.arange(5, 171)\n",
+    "for i in tqdm(tmp_grid_n_estimators):\n",
+    "    tmp_xgboost_fitted_model = XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+    "        colsample_bynode=1, colsample_bytree=0.6, gamma=0, gpu_id=-1,\n",
+    "        importance_type='gain', interaction_constraints=None,\n",
+    "        learning_rate=.4, max_delta_step=0, max_depth=11,\n",
+    "        min_child_weight=2, missing=np.nan, monotone_constraints=None,\n",
+    "        n_estimators=i, n_jobs=-1, num_parallel_tree=1,\n",
+    "        objective='reg:squarederror', random_state=40, reg_alpha=0,\n",
+    "        reg_lambda=1, scale_pos_weight=1, subsample=0.3, tree_method=None,\n",
+    "        validate_parameters=False, verbosity=None\n",
+    "    ).fit(Xtrn, Ytrn)\n",
+    "    tmp_xgboost_r2 = r2_score(Ytest, tmp_xgboost_fitted_model.predict(Xtest))\n",
+    "    tmp_xgboost_mse = mse(Ytest, tmp_xgboost_fitted_model.predict(Xtest))\n",
+    "    tmp_result = np.append(tmp_result, tmp_xgboost_mse)\n",
+    "\n",
+    "plt.plot(tmp_grid_n_estimators, tmp_result, color='#63f9')\n",
+    "plt.title(f'Зависимость  MSE от n_estimators')\n",
+    "plt.xlabel('Количество деревьев')\n",
+    "plt.ylabel('MSE')\n",
+    "plt.show()\n",
+    "\n",
+    "finally_model = XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+    "    colsample_bynode=1, colsample_bytree=0.6, gamma=0, gpu_id=-1,\n",
+    "    importance_type='gain', interaction_constraints=None,\n",
+    "    learning_rate=.4, max_delta_step=0, max_depth=11,\n",
+    "    min_child_weight=2, missing=np.nan, monotone_constraints=None,\n",
+    "    n_estimators=54, n_jobs=-1, num_parallel_tree=1,\n",
+    "    objective='reg:squarederror', random_state=40, reg_alpha=0,\n",
+    "    reg_lambda=1, scale_pos_weight=1, subsample=0.3, tree_method=None,\n",
+    "    validate_parameters=False, verbosity=None\n",
+    ").fit(Xtrn, Ytrn)\n",
+    "\n",
+    "plt.plot(Ytest.sort_index(), marker='o', markersize=4, linewidth=2, color='#63f9', label='Фактические значения')\n",
+    "plt.scatter(Ytest.index, finally_model.predict(Xtest), color='red', label='Предсказанные значения')\n",
+    "plt.title(f'XGBoost (MSE: {mse(Ytest, finally_model.predict(Xtest)):.4f})')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
