Спасибо за игру

--- a/RTS.ipynb
+++ b/RTS.ipynb
@@ -3294,7 +3294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3343,7 +3343,7 @@
        "  <th>Date:</th>           <td>Wed, May 27 2020</td>  <th>  Df Residuals:      </th>     <td>151</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>               <td>00:34:30</td>      <th>  Df Model:          </th>      <td>4</td>    \n",
+       "  <th>Time:</th>               <td>01:38:16</td>      <th>  Df Model:          </th>      <td>4</td>    \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -3383,7 +3383,7 @@
        "Method:            Maximum Likelihood   BIC:                          -405.386\n",
        "                                        No. Observations:                  155\n",
        "Date:                Wed, May 27 2020   Df Residuals:                      151\n",
-       "Time:                        00:34:30   Df Model:                            4\n",
+       "Time:                        01:38:16   Df Model:                            4\n",
        "                                  Mean Model                                 \n",
        "=============================================================================\n",
        "                 coef    std err          t      P>|t|       95.0% Conf. Int.\n",
@@ -3402,7 +3402,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3476,7 +3476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3498,7 +3498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3528,7 +3528,7 @@
        "  <th>Date:</th>           <td>Wed, May 27 2020</td>  <th>  Df Residuals:      </th>     <td>282</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>               <td>00:07:11</td>      <th>  Df Model:          </th>      <td>3</td>    \n",
+       "  <th>Time:</th>               <td>01:38:18</td>      <th>  Df Model:          </th>      <td>3</td>    \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -3565,7 +3565,7 @@
        "Method:            Maximum Likelihood   BIC:                          -782.297\n",
        "                                        No. Observations:                  285\n",
        "Date:                Wed, May 27 2020   Df Residuals:                      282\n",
-       "Time:                        00:07:11   Df Model:                            3\n",
+       "Time:                        01:38:18   Df Model:                            3\n",
        "                                  Mean Model                                 \n",
        "=============================================================================\n",
        "                 coef    std err          t      P>|t|       95.0% Conf. Int.\n",
@@ -3635,7 +3635,7 @@
        "  <th>Date:</th>           <td>Wed, May 27 2020</td>  <th>  Df Residuals:      </th>     <td>280</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>               <td>00:07:11</td>      <th>  Df Model:          </th>      <td>5</td>    \n",
+       "  <th>Time:</th>               <td>01:38:18</td>      <th>  Df Model:          </th>      <td>5</td>    \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -3678,7 +3678,7 @@
        "Method:            Maximum Likelihood   BIC:                          -823.385\n",
        "                                        No. Observations:                  285\n",
        "Date:                Wed, May 27 2020   Df Residuals:                      280\n",
-       "Time:                        00:07:11   Df Model:                            5\n",
+       "Time:                        01:38:18   Df Model:                            5\n",
        "                                 Mean Model                                 \n",
        "============================================================================\n",
        "                 coef    std err          t      P>|t|      95.0% Conf. Int.\n",
@@ -3698,7 +3698,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3716,7 +3716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3752,7 +3752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3787,6 +3787,26 @@
     "\n",
     "plt.legend(['VaR (1%)', 'VaR (5%)'])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06594468062209287"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(week_series_changed['2009':'2014'].var())"
    ]
   }
  ],
